Rename pod resources folder and update pod spec + example project with tests

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,12 @@
-target 'Wisper', :exclusive => true do
+source 'https://github.com/CocoaPods/Specs.git'
+use_frameworks!
+
+target 'Wisper_Example', :exclusive => true do
   pod "Wisper", :path => "../"
 end
 
-target 'WisperTests', :exclusive => true do
+target 'Wisper_Tests', :exclusive => true do
   pod "Wisper", :path => "../"
+  pod "OCMock"
+  
 end
