--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,12 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
+platform :ios, '8.0'
 
-target 'Wisper_Example', :exclusive => true do
+target 'Wisper_Example' do
   pod "Wisper", :path => "../"
 end
 
-target 'Wisper_Tests', :exclusive => true do
+target 'Wisper_Tests' do
   pod "Wisper", :path => "../"
   pod "OCMock"
-  
 end
